--- a/client/views/partials/reports/payableByParty.html
+++ b/client/views/partials/reports/payableByParty.html
@@ -51,7 +51,7 @@
     </div>
 
     <div class="col-sm-3 col-xs-12">
-        <div class="reports-panel payments activated" ui-sref="receivableByParty">
+        <div class="reports-panel payments activated">
 
             <div class="reports-image">
                 <figure>
@@ -135,22 +135,22 @@
                         </li>
                         <li class="filterToDate pall-zero pos-relative">
                             <span class="bot-arrow"><i class="fa fa-angle-down" aria-hidden="true"></i></span>
-
-
                             <input type="text" ng-model="filters.partyName"
                                    uib-typeahead="party.name for party in suppliersList | filter:$viewValue"
                                    class="form-control textfield" typeahead-min-length="1"
                                    typeahead-on-select="selectPartyId($item)"
                                    ng-change="resetPartyName();"
-                                   typeahead-select-on-exact="true" placeholder="Party Name"
+                                   typeahead-select-on-exact="true" placeholder="Type Party Name"
                                    typeahead-no-results="noParty" autocomplete="false">
                             <div ng-show="noTrucks">
                                 <i class="glyphicon glyphicon-remove red"></i>
                                 <span class="red"> No Results Found </span>
                             </div>
                         </li>
-                        <li class="col-xs-1">
-                            <button ng-click="getPaybleBypartyWithFilters()" type="button" class="btn go">Go</button>
+                        <li class="col-xs-1 pall-zero">
+                            <button ng-click="getPaybleBypartyWithFilters()" type="button" class="btn go">
+                                <i class="fa fa-search sear" aria-hidden="true"></i>
+                            </button>
                         </li>
                     </ul>
                     <ul class="list-inline mailDownload">
