--- a/client/views/partials/userProfile/myProfile.html
+++ b/client/views/partials/userProfile/myProfile.html
@@ -22,7 +22,7 @@
                     <div class="profile-right col-sm-10">
                         <div class="col-sm-6">
                             <div class="form-group form-group-custom">
-                                <div class="col-xs-12 styling-input-list">
+                                <div class="styling-input-list">
                                     <input type="text" name="userName" id="userName" readonly
                                            ng-model="account.profile.userName"
                                            class="form-control custom-form-control"/>
@@ -32,7 +32,7 @@
                             </div>
 
                             <div class="form-group form-group-custom">
-                                <div class="col-xs-12 styling-input-list">
+                                <div class="styling-input-list">
                                     <input type="text" name="mobile" id="mobile"
                                            ng-model="account.profile.contactPhone"
                                            class="form-control custom-form-control"/>
@@ -42,7 +42,7 @@
                             </div>
 
                             <div class="form-group form-group-custom">
-                                <div class="col-xs-12 styling-input-list">
+                                <div class="styling-input-list">
                                     <input type="text" name="email" id="email" ng-model="account.profile.email"
                                            class="form-control custom-form-control"/>
                                     <label class="focus-effect-for-input" aria-hidden="true">Email</label>
@@ -53,7 +53,7 @@
 
                         <div class="col-sm-6">
                             <div class="form-group form-group-custom">
-                                <div class="col-xs-12 styling-input-list">
+                                <div class="styling-input-list">
                                     <input type="text" name="totalGroups" id="totalGroups" readonly
                                            ng-model="account.accountGroupsCount"
                                            class="form-control custom-form-control"/>
@@ -62,7 +62,7 @@
                                 <div class="clearfix"></div>
                             </div>
                             <div class="form-group form-group-custom">
-                                <div class="col-xs-12 styling-input-list">
+                                <div class="styling-input-list">
                                     <input type="text" name="totalVehicles" id="totalVehicles" readonly
                                            ng-model="account.accountTrucksCount"
                                            class="form-control custom-form-control"/>
@@ -76,7 +76,7 @@
                             <h3>Reset Password</h3>
                             <div class="col-xs-12 col-sm-6 pall-zero">
                                 <div class="form-group form-group-custom">
-                                    <div class="col-xs-12 styling-input-list">
+                                    <div class="styling-input-list">
                                         <input type="password" name="password" id="oldpassword"
                                                ng-model="account.oldPassword"
                                                class="form-control custom-form-control"/>
@@ -90,7 +90,7 @@
                             <div class="col-xs-12 pall-zero">
                                 <div class="col-sm-6 pall-zero">
                                     <div class="form-group form-group-custom">
-                                        <div class="col-xs-12 styling-input-list">
+                                        <div class="styling-input-list">
                                             <input type="password" name="retypePassword"
                                                    id="Password" ng-model="account.newPassword"
                                                    class="form-control custom-form-control"/>
@@ -101,9 +101,9 @@
                                         </div>
                                     </div>
                                 </div>
-                                    <div class="col-sm-6 pall-zero">
+                                    <div class="col-sm-6">
                                         <div class="form-group form-group-custom">
-                                            <div class="col-xs-12 styling-input-list">
+                                            <div class="styling-input-list">
                                                 <input type="password" name="retypePassword"
                                                        id="retypePassword"
                                                        ng-model="account.confirmPassword"
