--- a/client/views/partials/gps/mapView.html
+++ b/client/views/partials/gps/mapView.html
@@ -23,7 +23,7 @@
             <div class="clearfix"></div>
         </div>
         <div class="map-view">
-            <div  id="map" style="width: 1220px; height: 500px;"></div>
+            <div  id="map" style="width: 100%; height: 500px;"></div>
         </div>
     </div>
 </div>
