--- a/client/views/partials/party/party-list.html
+++ b/client/views/partials/party/party-list.html
@@ -1,36 +1,44 @@
 <div class="main-right col-xs-12" ng-controller="PartyListController">
     <div class="col-xs-12 pall-zero mb-10">
         <div class="col-sm-3 pall-zero"><h3>Parties</h3></div>
-        <div class="col-xs-8 col-xs-push-1 pall-zero">
-        <div class="col-sm-7">
-            <form>
-            <div class="input-group stylish-input-group">
-                <input type="text"  ng-model="partyName1" class="form-control" placeholder="Search By Party Name">
-                <span class="input-group-addon">
+        <ul class="col-sm-9 pall-zero list-inline">
+            <li class="col-sm-6">
+                <form>
+                    <div class="input-group stylish-input-group">
+                        <input type="text" ng-model="partyName1" class="form-control"
+                               placeholder="Search By Party Name">
+                        <span class="input-group-addon">
                         <button type="submit" ng-click="searchByPartyName(partyName1);">
                               <i class="fa fa-search sear" aria-hidden="true"></i>
                         </button>
                     </span>
-            </div>
-            </form>
-        </div>
-        <div class="col-sm-3 pall-zero pos-relative">
-            <span class="bot-arrow"><i class="fa fa-angle-down" aria-hidden="true"></i></span>
-            <select class="form-control" ng-model="partyName" ng-change="searchByPartyName(partyName);">
-                <option value="" selected>All Parties</option>
-                <option ng-repeat="parties in partiesList">{{parties.name}}</option>
-            </select>
-        </div>
-            <div class="col-sm-1 list-inline mailDownload">
-                <button  style="margin-left:7px" type="button" ng-click="shareDetailsViaEmail()"
-                         class="btn mailImage"><img src="images/Reports_Mail.png">
+                    </div>
+                </form>
+            </li>
+            <li class="col-sm-4 pos-relative">
+                <div class="select-box erp-box">
+                    <ui-select ng-model="partyName" theme="select2"
+                               title="Choose a person" append-to-body="true" ng-change="searchByPartyName(partyName.name);">
+                        <ui-select-match placeholder="Select a Party" class="form-control ui-select-control">
+                            {{$select.selected.name || name}}
+                        </ui-select-match>
+                        <ui-select-choices
+                                repeat="parties in partiesList | propsFilter: {name: $select.search}">
+                            <div ng-bind-html="parties.name | highlight: $select.search"></div>
+                        </ui-select-choices>
+                    </ui-select>
+                </div>
+            </li>
+            <li class="col-sm-1">
+                <button type="button" ng-click="shareDetailsViaEmail()"
+                        class="btn mailImage"><img src="images/Reports_Mail.png">
                 </button>
-            </div>
-            <div>
+            </li>
+            <li class="col-sm-1">
                 <button type="button" ng-click="downloadDetails();" class="btn mailImage">
                     <img src="images/Reports_Download.png"></button>
-            </div>
-        </div>
+            </li>
+        </ul>
     </div>
 
     <table class="table table-bordered table-striped table-condensed table-hover" ng-table="partyParams">
@@ -51,18 +59,20 @@
             <td data-title="'Party Type'" sortable="'partyType'" class="clickable-item">{{
                 parties.partyType}}
             </td>
-            <td data-title="'Triplanes'" sortable="'tripLanes'" class="clickable-item">{{
+         <!--   <td data-title="'Triplanes'" sortable="'tripLanes'" class="clickable-item">{{
                 parties.tripLanes.length }}
-            </td>
+            </td>-->
 
             <td data-title="'Created By'" sortable="'createdByName'"
                 class="clickable-item">{{ parties.attrs.createdByName }}
             </td>
 
             <td data-title="'Action'" class="col-sm-2">
-                <a href="#" ng-show="userType=='account' || userId==parties.createdBy" class="btn" ng-click="goToEditPartyPage(parties._id)">
+                <a href="#" ng-show="userType=='account' || userId==parties.createdBy" class="btn"
+                   ng-click="goToEditPartyPage(parties._id)">
                     <span class="glyphicon glyphicon-pencil"></span></a>
-                <a href="#" ng-show="userType=='account' || userId==parties.createdBy" class="btn" ng-click="deleteParty(parties._id)">
+                <a href="#" ng-show="userType=='account' || userId==parties.createdBy" class="btn"
+                   ng-click="deleteParty(parties._id)">
                     <span class="glyphicon glyphicon-remove"></span></a>
             </td>
         </tr>
@@ -73,7 +83,8 @@
 
     <div class="add-image pull-right">
         <figure>
-            <a href="#" ng-click="goToEditPartyPage()"><img src="images/Add_Parties.png" alt="Add Party" title="Add Party"></a>
+            <a href="#" ng-click="goToEditPartyPage()"><img src="images/Add_Parties.png" alt="Add Party"
+                                                            title="Add Party"></a>
         </figure>
     </div>
 
