--- a/client/views/partials/payments/paymentsReceived.html
+++ b/client/views/partials/payments/paymentsReceived.html
@@ -1,53 +1,47 @@
 <div class="main-right col-xs-12" ng-controller="PaymentsCtrl">
     <div class="col-xs-12 pall-zero mb-10">
         <div class="col-sm-2 pall-zero"><h3>Payments</h3></div>
-        <div class="col-sm-8 pall-zero">
-            <ul class="list-inline ">
-                <li class="col-sm-3">
-                    <date-picker ng-model="fromDate" class="'paymentscontrol'" ban-future="'banFutureDate'"></date-picker>
-                </li>
-                <li class="col-sm-3">
-                    <date-picker class="'paymentscontrol'" ban-future="'banFutureDate'" ng-model="toDate"
-                                ></date-picker>
-                </li>
-                <li class="col-sm-3">
-                    <form>
-                        <div class="">
-                            <input type="text" ng-model="partyName1" class="form-control"
-                                   placeholder="Search By Party Name">
-                        </div>
-                    </form>
-                </li>
-                <li class="col-sm-1">
-                    <button type="submit" ng-click="searchByPartyName(partyName1);" class="btn go">
-                        <i class="fa fa-search sear" aria-hidden="true"></i>
-                    </button>
-                </li>
-                <li class="pall-zero pos-relative col-sm-2">
-                    <span class="bot-arrow"><i class="fa fa-angle-down" aria-hidden="true"></i></span>
-                    <select class="form-control" ng-model="partyName" ng-change="searchByPartyName(partyName);">
-                        <option value="" selected>All Parties</option>
-                        <option ng-repeat="parties in partiesList">{{parties.name}}</option>
-                    </select>
-                </li>
-            </ul>
-        </div>
-        <div class="col-sm-1 list-inline mailDownload">
-            <button  style="margin-left:7px" type="button" ng-click="shareDetailsViaEmail()"
-                     class="btn mailImage"><img src="images/Reports_Mail.png">
-            </button>
-        </div>
-        <div class="col-sm-1 list-inline mailDownload">
-            <button type="button" ng-click="downloadDetails();" class="btn mailImage">
-                <img src="images/Reports_Download.png"></button>
-        </div>
-
-        </div>
-        </div>
+        <ul class="col-sm-10 pall-zero list-inline">
+            <li class="col-sm-3 pall-zero">
+                <date-picker ng-model="fromDate" class="'paymentscontrol'"
+                             ban-future="'banFutureDate'"></date-picker>
+            </li>
+            <li class="col-sm-3 pall-zero">
+                <date-picker class="'paymentscontrol'" ban-future="'banFutureDate'" ng-model="toDate"
+                ></date-picker>
+            </li>
+            <li class="col-sm-1 pall-zero">
+                <button type="submit" ng-click="searchByPartyName(partyName1);" class="btn go">
+                    <i class="fa fa-search sear" aria-hidden="true"></i>
+                </button>
+            </li>
+            <li class="col-sm-3 pall-zero">
+                <div class="select-box erp-box">
+                    <ui-select ng-model="partyName" theme="select2"
+                               title="Choose a person" append-to-body="true"
+                               ng-change="searchByPartyName(partyName.name);">
+                        <ui-select-match placeholder="Select a Party" class="form-control ui-select-control">
+                            {{$select.selected.name || name}}
+                        </ui-select-match>
+                        <ui-select-choices
+                                repeat="parties in partiesList | propsFilter: {name: $select.search}">
+                            <div ng-bind-html="parties.name | highlight: $select.search"></div>
+                        </ui-select-choices>
+                    </ui-select>
+                </div>
+            </li>
+            <li class="col-sm-1">
+                <button type="button" ng-click="shareDetailsViaEmail()"
+                        class="btn mailImage"><img src="images/Reports_Mail.png">
+                </button>
+            </li>
+            <li class="col-sm-1">
+                <button type="button" ng-click="downloadDetails();" class="btn mailImage">
+                    <img src="images/Reports_Download.png"></button>
+            </li>
+        </ul>
     </div>
-    <!--<div class="toolbar-button-div pull-right mb-10">-->
-    <!--<button class="btn  btn-blue pull-right" ng-click="goToEditPaymentsPage()">Add Payments</button>-->
-    <!--</div>-->
+
     <table class="table table-bordered table-striped table-condensed table-hover" ng-table="paymentParams">
         <tr ng-repeat="payments in currentPageOfPayments" style="text-align: center;">
             <td data-title="'Date'" sortable="'date'" class="clickable-item">{{ payments.date |
@@ -94,4 +88,5 @@
                                                                title="Add Payment"></a>
         </figure>
     </div>
+</div>
 </div>
