--- a/client/views/partials/reports/expenseByVehicles.html
+++ b/client/views/partials/reports/expenseByVehicles.html
@@ -35,166 +35,167 @@
     </div>
 
 
-        <div class="col-sm-3 col-xs-12">
-            <div class="reports-panel activated" ui-sref="expenseByVehicles">
-                <div class="reports-image">
-                    <figure>
-                        <img src="images/expenses.png">
-                    </figure>
-                </div>
-                <div class="reports-text">
-                    <h3>Expenses</h3>
-                    <p>From All Vehicles</p>
-                    <small><i class="fa fa-inr"></i> {{totals.expensesTotal}}
-                    </small>
-                </div>
+    <div class="col-sm-3 col-xs-12">
+        <div class="reports-panel activated" ui-sref="expenseByVehicles">
+            <div class="reports-image">
+                <figure>
+                    <img src="images/expenses.png">
+                </figure>
             </div>
-        </div>
-
-        <div class="col-sm-3 col-xs-12">
-            <div class="reports-panel payments" ui-sref="receivableByParty">
-
-                <div class="reports-image">
-                    <figure>
-                        <img src="images/payments.png">
-                    </figure>
-                </div>
-                <div class="reports-text">
-                    <h3>Payments</h3>
-                    <p>From All Parties</p>
-                </div>
-                <div class="col-xs-12 pall-zero">
-                    <ul class="list-inline">
-                        <li class="payble" ui-sref="payableByParty">
-                            <span class="payable">Payable</span><br>
-                            <small><i class="fa fa-inr"></i>
-                                {{totals.paybleAmount || 0}}
-                            </small>
-                        </li>
-                        <li class="payble" ui-sref="receivableByParty">
-                            <span class="receivable">Receivable</span> <br>
-                            <small><i class="fa fa-inr"></i>
-                                {{totals.pendingDue || 0}}
-                            </small>
-                        </li>
-
-                    </ul>
-                </div>
-
-
-            </div>
-        </div>
-
-        <div class="col-sm-3 col-xs-12">
-            <div class="reports-panel" ui-sref="listOfExpireTrucks">
-                <div class="col-xs-12 pall-zero">
-                    <div class="reports-image">
-                        <figure>
-                            <img src="images/expiry.png">
-                        </figure>
-                    </div>
-                    <div class="reports-text">
-                        <h3>Expiry Details</h3>
-                        <p>From All Vehicles</p>
-                    </div>
-                </div>
-                <ul class="col-xs-12 list-inline exp-trucks">
-                    <li><a href="#">{{totals.expiring.fitnessExpiryCount}}</a>
-                        <small>Fitness</small>
-                    </li>
-                    <li><a href="#">{{totals.expiring.permitExpiryCount}}</a>
-                        <small>Permit</small>
-                    </li>
-                    <li><a href="#">{{totals.expiring.taxExpiryCount}}</a>
-                        <small>Tax</small>
-                    </li>
-                    <li><a href="#">{{totals.expiring.insuranceExpiryCount}}</a>
-                        <small>Insurance</small>
-                    </li>
-                    <li><a href="#">{{totals.expiring.pollutionExpiryCount}}</a>
-                        <small>Pollutions</small>
-                    </li>
-                </ul>
-            </div>
-        </div>
-
-        <div class="col-xs-12">
-
-            <div class="main-temp col-xs-12 mt-20">
-                <div class="col-xs-12 pall-zero db-expenses">
-                    <div class="col-xs-3 pall-zero"><p>Total Expenses</p></div>
-                    <div class="col-xs-9 pall-zero">
-                        <ul class="list-inline report-expense">
-                            <li class="filterFromDate">
-                                <date-picker ng-model="filters.fromDate" past-present="'pastPresentDate'"
-                                             class="'textfield'">
-                                </date-picker>
-                            </li>
-                            <li class="filterToDate">
-                                <date-picker ng-model="filters.toDate" ban-future="'banFutureDate'"
-                                             class="'textfield'"></date-picker>
-                            </li>
-                            <li class="filterToDate pall-zero pos-relative">
-                                <span class="bot-arrow"><i class="fa fa-angle-down" aria-hidden="true"></i></span>
-                                <input type="text" ng-model="filters.regNumber"
-                                       uib-typeahead="truck.registrationNo for truck in trucksList | filter:$viewValue"
-                                       class="form-control textfield" typeahead-min-length="1"
-                                       typeahead-on-select="selectTruckId($item)"
-                                       typeahead-select-on-exact="true" placeholder="Registration Num"
-                                       typeahead-no-results="noTrucks" autocomplete="false">
-                                <div ng-show="noTrucks">
-                                    <i class="glyphicon glyphicon-remove red"></i>
-                                    <span class="red"> No Results Found </span>
-                                </div>
-                            </li>
-                            <li class="col-xs-1">
-                                <button ng-click="validateFilters('expense')" type="button" class="btn go">Go</button>
-                            </li>
-                        </ul>
-                        <ul class="list-inline mailDownload">
-                            <li>
-                                <button type="button" ng-click="shareExpensesDetailsViaEmail();" class="btn mailImage">
-                                    <img
-                                            src="images/Reports_Mail.png"></button>
-                            </li>
-
-                            <li>
-                                <button type="button" ng-click="downloadExpenseDetailsByVechicle();"
-                                        class="btn mailImage">
-                                    <img src="images/Reports_Download.png"></button>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-xs-12">
-                    <div>
-                        <div class="alert alert-danger" role="alert" ng-show="filters.error.length">
-                            <ul>
-                                <li ng-repeat="error in filters.error">{{error}}</li>
-                            </ul>
-                        </div>
-                        <div class="alert alert-success" role="alert" ng-show="filters.success.length">
-                            <ul>
-                                <li ng-repeat="success in filters.success">{{success}}</li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-
-                <table id="expenselist"
-                       class="table table-bordered table-striped table-condensed table-hover"
-                       cellspacing="0" width="100%">
-                    <tfoot>
-                    <tr>
-                        <th>Total</th>
-                        <th>{{totalExpenses.totalDieselExpense}}</th>
-                        <th>{{totalExpenses.totaltollExpense}}</th>
-                        <th>{{totalExpenses.totalmExpense}}</th>
-                        <th>{{totalExpenses.totalmisc}}</th>
-                    </tr>
-                    </tfoot>
-                </table>
+            <div class="reports-text">
+                <h3>Expenses</h3>
+                <p>From All Vehicles</p>
+                <small><i class="fa fa-inr"></i> {{totals.expensesTotal}}
+                </small>
             </div>
         </div>
     </div>
+
+    <div class="col-sm-3 col-xs-12">
+        <div class="reports-panel payments">
+
+            <div class="reports-image">
+                <figure>
+                    <img src="images/payments.png">
+                </figure>
+            </div>
+            <div class="reports-text">
+                <h3>Payments</h3>
+                <p>From All Parties</p>
+            </div>
+            <div class="col-xs-12 pall-zero">
+                <ul class="list-inline">
+                    <li class="payble" ui-sref="payableByParty">
+                        <span class="payable">Payable</span><br>
+                        <small><i class="fa fa-inr"></i>
+                            {{totals.paybleAmount || 0}}
+                        </small>
+                    </li>
+                    <li class="payble" ui-sref="receivableByParty">
+                        <span class="receivable">Receivable</span> <br>
+                        <small><i class="fa fa-inr"></i>
+                            {{totals.pendingDue || 0}}
+                        </small>
+                    </li>
+
+                </ul>
+            </div>
+
+
+        </div>
+    </div>
+
+    <div class="col-sm-3 col-xs-12">
+        <div class="reports-panel" ui-sref="listOfExpireTrucks">
+            <div class="col-xs-12 pall-zero">
+                <div class="reports-image">
+                    <figure>
+                        <img src="images/expiry.png">
+                    </figure>
+                </div>
+                <div class="reports-text">
+                    <h3>Expiry Details</h3>
+                    <p>From All Vehicles</p>
+                </div>
+            </div>
+            <ul class="col-xs-12 list-inline exp-trucks">
+                <li><a href="#">{{totals.expiring.fitnessExpiryCount}}</a>
+                    <small>Fitness</small>
+                </li>
+                <li><a href="#">{{totals.expiring.permitExpiryCount}}</a>
+                    <small>Permit</small>
+                </li>
+                <li><a href="#">{{totals.expiring.taxExpiryCount}}</a>
+                    <small>Tax</small>
+                </li>
+                <li><a href="#">{{totals.expiring.insuranceExpiryCount}}</a>
+                    <small>Insurance</small>
+                </li>
+                <li><a href="#">{{totals.expiring.pollutionExpiryCount}}</a>
+                    <small>Pollutions</small>
+                </li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="col-xs-12">
+
+        <div class="main-temp col-xs-12 mt-20">
+            <div class="col-xs-12 pall-zero db-expenses">
+                <div class="col-xs-3 pall-zero"><p>Total Expenses</p></div>
+                <div class="col-xs-9 pall-zero">
+                    <ul class="list-inline report-expense">
+                        <li class="filterFromDate">
+                            <date-picker ng-model="filters.fromDate" past-present="'pastPresentDate'"
+                                         class="'textfield'">
+                            </date-picker>
+                        </li>
+                        <li class="filterToDate">
+                            <date-picker ng-model="filters.toDate" ban-future="'banFutureDate'"
+                                         class="'textfield'"></date-picker>
+                        </li>
+                        <li class="filterToDate pall-zero pos-relative">
+                            <span class="bot-arrow"><i class="fa fa-angle-down" aria-hidden="true"></i></span>
+                            <input type="text" ng-model="filters.regNumber"
+                                   uib-typeahead="truck.registrationNo for truck in trucksList | filter:$viewValue"
+                                   class="form-control textfield" typeahead-min-length="1"
+                                   typeahead-on-select="selectTruckId($item)"
+                                   typeahead-select-on-exact="true" placeholder="Type Reg Num"
+                                   typeahead-no-results="noTrucks" autocomplete="false">
+                            <div ng-show="noTrucks">
+                                <i class="glyphicon glyphicon-remove red"></i>
+                                <span class="red"> No Results Found </span>
+                            </div>
+                        </li>
+                        <li class="col-sm-1 pall-zero">
+                            <button type="submit" ng-click="validateFilters('expense');" class="btn go">
+                                <i class="fa fa-search sear" aria-hidden="true"></i>
+                            </button>
+                        </li>
+                    </ul>
+                    <ul class="list-inline mailDownload">
+                        <li>
+                            <button type="button" ng-click="shareExpensesDetailsViaEmail();" class="btn mailImage">
+                                <img src="images/Reports_Mail.png"></button>
+                        </li>
+
+                        <li>
+                            <button type="button" ng-click="downloadExpenseDetailsByVechicle();"
+                                    class="btn mailImage">
+                                <img src="images/Reports_Download.png"></button>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-xs-12">
+                <div>
+                    <div class="alert alert-danger" role="alert" ng-show="filters.error.length">
+                        <ul>
+                            <li ng-repeat="error in filters.error">{{error}}</li>
+                        </ul>
+                    </div>
+                    <div class="alert alert-success" role="alert" ng-show="filters.success.length">
+                        <ul>
+                            <li ng-repeat="success in filters.success">{{success}}</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+            <table id="expenselist"
+                   class="table table-bordered table-striped table-condensed table-hover"
+                   cellspacing="0" width="100%">
+                <tfoot>
+                <tr>
+                    <th>Total</th>
+                    <th>{{totalExpenses.totalDieselExpense}}</th>
+                    <th>{{totalExpenses.totaltollExpense}}</th>
+                    <th>{{totalExpenses.totalmExpense}}</th>
+                    <th>{{totalExpenses.totalmisc}}</th>
+                </tr>
+                </tfoot>
+            </table>
+        </div>
+    </div>
+</div>
 
