--- a/client/views/partials/reports/expiryTrucks.html
+++ b/client/views/partials/reports/expiryTrucks.html
@@ -51,7 +51,7 @@
     </div>
 
     <div class="col-sm-3 col-xs-12">
-        <div class="reports-panel payments" ui-sref="receivableByParty">
+        <div class="reports-panel payments">
 
             <div class="reports-image">
                 <figure>
@@ -121,45 +121,43 @@
     <div class="col-xs-12">
 
         <div class="main-temp col-xs-12 mt-20">
-            <div class="col-xs-12 pall-zero db-expenses">
-                <div class="col-xs-2 pall-zero">
+            <div class="col-sm-12 pall-zero db-expenses">
+                <div class="col-sm-2 pall-zero">
                     <p>Total Expiry Trucks</p>
                 </div>
-                <div class="col-xs-10 pall-zero">
-                    <ul class="list-inline pull-right">
-                        <li class="col-xs-6 pall-zero  pos-relative">
+                <ul class="list-inline col-sm-6 pall-zero col-sm-push-4">
+                    <li class="col-sm-6 pall-zero  pos-relative">
                              <span class="bot-arrow">
                                 <i class="fa fa-angle-down" aria-hidden="true"></i>
                              </span>
-                            <input type="text" ng-model="filters.regNumber"
-                                   uib-typeahead="truck.registrationNo for truck in trucksList | filter:$viewValue"
-                                   class="form-control textfield" typeahead-min-length="1"
-                                   typeahead-on-select="selectTruckId($item)" typeahead-select-on-exact="true"
-                                   placeholder="Registration Num" typeahead-no-results="noTrucks" autocomplete="false">
-                            <div ng-show="noTrucks">
-                                <i class="glyphicon glyphicon-remove red"></i>
-                                <span class="red"> No Results Found </span>
-                            </div>
-                        </li>
-                        <li class="col-xs-2 pall-zero">
-                            <button ng-click="getTruckExpires()" type="button" class="btn go">Go</button>
-                        </li>
-                        <li class="col-xs-2">
-                            <button type="button" ng-click="shareExpairedDetailsViaEmail();" class="btn mailImage">
-                                <img src="images/Reports_Mail.png">
-                            </button>
-                        </li>
+                        <input type="text" ng-model="filters.regNumber"
+                               uib-typeahead="truck.registrationNo for truck in trucksList | filter:$viewValue"
+                               class="form-control textfield" typeahead-min-length="1"
+                               typeahead-on-select="selectTruckId($item)" typeahead-select-on-exact="true"
+                               placeholder="Type Reg Num" typeahead-no-results="noTrucks" autocomplete="false">
+                        <div ng-show="noTrucks">
+                            <i class="glyphicon glyphicon-remove red"></i>
+                            <span class="red"> No Results Found </span>
+                        </div>
+                    </li>
+                    <li class="col-sm-2 pall-zero">
+                        <button ng-click="getTruckExpires()" type="button" class="btn go">
+                            <i class="fa fa-search sear" aria-hidden="true"></i>
+                        </button>
+                    </li>
+                    <li class="col-sm-2">
+                        <button type="button" ng-click="shareExpairedDetailsViaEmail();" class="btn mailImage">
+                            <img src="images/Reports_Mail.png">
+                        </button>
+                    </li>
 
-                        <li class="col-xs-2">
-                            <button type="button" ng-click="downloadExpairyDetailsByTruck();" class="btn mailImage">
-                                <img src="images/Reports_Download.png">
-                            </button>
-                        </li>
-                    </ul>
-                    <ul class="list-inline mailDownload">
+                    <li class="col-sm-2">
+                        <button type="button" ng-click="downloadExpairyDetailsByTruck();" class="btn mailImage">
+                            <img src="images/Reports_Download.png">
+                        </button>
+                    </li>
+                </ul>
 
-                    </ul>
-                </div>
             </div>
 
             <table id="truckExpirylist"
