--- a/client/views/partials/reports/payableByPartyName.html
+++ b/client/views/partials/reports/payableByPartyName.html
@@ -51,7 +51,7 @@
     </div>
 
     <div class="col-sm-3 col-xs-12">
-        <div class="reports-panel payments activated" ui-sref="receivableByParty">
+        <div class="reports-panel payments activated">
 
             <div class="reports-image">
                 <figure>
