--- a/client/views/partials/reports/receiptByPartyName.html
+++ b/client/views/partials/reports/receiptByPartyName.html
@@ -53,7 +53,7 @@
     </div>
 
     <div class="col-sm-3 col-xs-12">
-        <div class="reports-panel payments" ui-sref="receivableByParty">
+        <div class="reports-panel payments">
 
             <div class="reports-image">
                 <figure>
