--- a/client/views/partials/reports/revenueByVehicles.html
+++ b/client/views/partials/reports/revenueByVehicles.html
@@ -53,7 +53,7 @@
     </div>
 
     <div class="col-sm-3 col-xs-12">
-        <div class="reports-panel payments" ui-sref="receivableByParty">
+        <div class="reports-panel payments">
 
             <div class="reports-image">
                 <figure>
@@ -118,10 +118,7 @@
             </ul>
         </div>
     </div>
-
-
     <div class="col-xs-12">
-
         <div class="main-temp col-xs-12 mt-20">
             <div class="col-xs-12 pall-zero db-expenses">
                 <div class="col-xs-3 pall-zero"><p>Total Revenue</p></div>
@@ -143,16 +140,19 @@
                                    class="form-control textfield" typeahead-min-length="1"
                                    typeahead-on-select="selectTruckId($item)"
                                    ng-change="resetTruckName();"
-                                   typeahead-select-on-exact="true" placeholder="Registration Num"
+                                   typeahead-select-on-exact="true" placeholder="Type Reg No"
                                    typeahead-no-results="noTruck" autocomplete="false">
 
                             <div ng-show="noTrucks">
                                 <i class="glyphicon glyphicon-remove red"></i>
                                 <span class="red"> No Results Found </span>
                             </div>
+
                         </li>
-                        <li class="col-xs-1">
-                            <button ng-click="validateFilters('revenue')" type="button" class="btn go">Go</button>
+                        <li class="col-sm-1 pall-zero">
+                            <button type="submit" ng-click="validateFilters('revenue');" class="btn go">
+                                <i class="fa fa-search sear" aria-hidden="true"></i>
+                            </button>
                         </li>
                     </ul>
                     <ul class="list-inline mailDownload">
