--- a/client/views/partials/trips/tripsList.html
+++ b/client/views/partials/trips/tripsList.html
@@ -1,87 +1,96 @@
+<div class="main-right col-xs-12" ng-controller="ShowTripsCtrl">
 
-        <div class="main-right col-xs-12" ng-controller="ShowTripsCtrl">
-
-            <div class="col-xs-12 pall-zero mb-10">
-                <div class="col-sm-3 pall-zero"><h3>Trips</h3></div>
-                <div class="col-xs-8 col-xs-push-1 pall-zero">
-                <div class="col-sm-7">
-                    <form>
+    <div class="col-xs-12 pall-zero mb-10">
+        <div class="col-sm-3 pall-zero"><h3>Trips</h3></div>
+        <ul class="col-sm-9 pall-zero list-inline">
+            <li class="col-sm-6">
+                <form>
                     <div class="input-group stylish-input-group">
-                        <input type="text" class="form-control" ng-model="truckNumber1"  placeholder="Search By Vehicle Number">
+                        <input type="text" class="form-control" ng-model="truckNumber1"
+                               placeholder="Search By Vehicle Number">
                         <span class="input-group-addon">
                         <button type="submit" ng-click="searchByVechicleNumber(truckNumber1);">
                                 <i class="fa fa-search sear" aria-hidden="true"></i>
                         </button>
                     </span>
                     </div>
-                    </form>
+                </form>
+            </li>
+            <li class="col-sm-4 pos-relative">
+                <div class="select-box erp-box">
+                    <ui-select ng-model="truckName" theme="select2"
+                               title="Choose a person" append-to-body="true"
+                               ng-change="searchByVechicleNumber(truckName.registrationNo);">
+                        <ui-select-match placeholder=" Select a Truck" class="form-control ui-select-control">
+                            {{$select.selected.registrationNo || registrationNo}}
+                        </ui-select-match>
+                        <ui-select-choices
+                                repeat="trucks in trucksList  | propsFilter: {registrationNo: $select.search}">
+                            <div ng-bind-html="trucks.registrationNo | highlight: $select.search"></div>
+                        </ui-select-choices>
+                    </ui-select>
                 </div>
-                <div class="col-sm-3 pall-zero pos-relative">
-                    <span class="bot-arrow"><i class="fa fa-angle-down" aria-hidden="true"></i></span>
-                    <select class="form-control" ng-model="truckNumber" ng-change="searchByVechicleNumber(truckNumber);">
-                        <option value="" selected>All Vehicles</option>
-                        <option ng-repeat="truck in trucksList">{{truck.registrationNo}}</option>
+            </li>
+            <li class="col-sm-1">
+                <button type="button" ng-click="shareDetailsViaEmail()"
+                        class="btn mailImage"><img src="images/Reports_Mail.png">
+                </button>
+            </li>
+            <li class="col-sm-1">
+                <button type="button" ng-click="downloadDetails();" class="btn mailImage">
+                    <img src="images/Reports_Download.png"></button>
+            </li>
 
-                    </select>
-                </div>
-                    <div class="col-sm-1 list-inline mailDownload">
-                        <button  style="margin-left:7px" type="button" ng-click="shareDetailsViaEmail()"
-                                 class="btn mailImage"><img src="images/Reports_Mail.png">
-                        </button>
-                    </div>
-                    <div>
-                        <button type="button" ng-click="downloadDetails();" class="btn mailImage">
-                            <img src="images/Reports_Download.png"></button>
-                    </div>
+        </ul>
+    </div>
 
-                </div>
-            </div>
+    <!--<button class="btn btn-blue pull-right mb-10" ng-click="goToEditTripPage()">Add Trips</button>-->
 
-            <!--<button class="btn btn-blue pull-right mb-10" ng-click="goToEditTripPage()">Add Trips</button>-->
+    <table class="table table-bordered table-striped table-condensed table-hover" ng-table="tripParams">
+        <tr ng-repeat="trips in currentPageOfTrips" style="text-align: center;">
+            <td data-title="'Trip Date'" sortable="'date'" class="clickable-item">
+                {{trips.date | date:'dd-MM-yy'}}
+            </td>
+            <td data-title="'Reg No'" sortable="'truckName'" class="clickable-item">{{
+                trips.attrs.truckName}}
+            </td>
+            <td data-title="'Party Name'" sortable="'partyName'" class="clickable-item">{{
+                trips.attrs.partyName }}
+            </td>
+            <td data-title="'Driver'" sortable="'fullName'" class="clickable-item">{{
+                trips.attrs.fullName }}
+            </td>
+            <td data-title="'Freight'" sortable="'freightAmount'" class="clickable-item">{{
+                trips.freightAmount }}
+            </td>
+          <!--  <td data-title="'Trip Lane'" sortable="'tripLane'" class="clickable-item">{{
+                trips.tripLane }}
+            </td>-->
+            <td data-title="'Created By'" sortable="'createdByName'"
+                class="clickable-item">{{ trips.attrs.createdByName }}
+            </td>
 
-            <table class="table table-bordered table-striped table-condensed table-hover" ng-table="tripParams">
-                <tr ng-repeat="trips in currentPageOfTrips" style="text-align: center;">
-                    <td data-title="'Trip Date'" sortable="'date'" class="clickable-item">
-                        {{trips.date | date:'dd-MM-yy'}}
-                    </td>
-                    <td data-title="'Reg No'" sortable="'truckName'" class="clickable-item">{{
-                        trips.attrs.truckName}}
-                    </td>
-                    <td data-title="'Party Name'" sortable="'partyName'" class="clickable-item">{{
-                        trips.attrs.partyName }}
-                    </td>
-                    <td data-title="'Driver'" sortable="'fullName'" class="clickable-item">{{
-                        trips.attrs.fullName }}
-                    </td>
-                    <td data-title="'Freight'" sortable="'freightAmount'" class="clickable-item">{{
-                        trips.freightAmount }}
-                    </td>
-                    <td data-title="'Trip Lane'" sortable="'tripLane'" class="clickable-item">{{
-                        trips.tripLane }}
-                    </td>
-                    <td data-title="'Created By'" sortable="'createdByName'"
-                        class="clickable-item">{{ trips.attrs.createdByName }}
-                    </td>
+            <td data-title="'Action'" class="col-sm-2">
+                <a href="#" ng-show="userType=='account' || userId==trips.createdBy" class="btn"
+                   ng-click="goToEditTripPage(trips._id)">
+                    <span class="glyphicon glyphicon-pencil"></span></a>
 
-                    <td data-title="'Action'" class="col-sm-2">
-                        <a href="#" ng-show="userType=='account' || userId==trips.createdBy" class="btn" ng-click="goToEditTripPage(trips._id)">
-                            <span class="glyphicon glyphicon-pencil"></span></a>
+                <a href="#" ng-show="userType=='account' || userId==trips.createdBy" class="btn"
+                   ng-click="deleteTrip(trips._id)">
 
-                        <a href="#" ng-show="userType=='account' || userId==trips.createdBy" class="btn" ng-click="deleteTrip(trips._id)">
-
-                            <span class="glyphicon glyphicon-remove"></span>
-                        </a>
-                    </td>
-                </tr>
-                <tr ng-if="!currentPageOfTrips || currentPageOfTrips.length === 0">
-                    <td colspan="8">No trips Records exist.</td>
-                </tr>
-            </table>
-            <div class="add-image pull-right">
-                <figure>
-                    <a href="#" ng-click="goToEditTripPage()"><img src="images/Add_Vehicle.png" alt="Add Trip" title="Add Trip"></a>
-                </figure>
-            </div>
+                    <span class="glyphicon glyphicon-remove"></span>
+                </a>
+            </td>
+        </tr>
+        <tr ng-if="!currentPageOfTrips || currentPageOfTrips.length === 0">
+            <td colspan="8">No trips Records exist.</td>
+        </tr>
+    </table>
+    <div class="add-image pull-right">
+        <figure>
+            <a href="#" ng-click="goToEditTripPage()"><img src="images/Add_Vehicle.png" alt="Add Trip" title="Add Trip"></a>
+        </figure>
+    </div>
 
 
-        </div>
+</div>
