--- a/client/views/partials/trucks/trucks-list.html
+++ b/client/views/partials/trucks/trucks-list.html
@@ -1,9 +1,8 @@
 <div class="main-right col-xs-12" ng-controller="TrucksController">
-
     <div class="col-xs-12 pall-zero mb-10">
         <div class="col-sm-3 pall-zero"><h3>Trucks</h3></div>
-        <div class="col-xs-8 col-xs-push-1 pall-zero">
-            <div class="col-sm-7">
+        <ul class="col-sm-9 pall-zero list-inline">
+            <li class="col-sm-6">
                 <form>
                     <div class="input-group stylish-input-group">
                         <input type="text" ng-model="truckName1" class="form-control"
@@ -15,24 +14,33 @@
                     </span>
                     </div>
                 </form>
-            </div>
-            <div class="col-sm-3 pall-zero pos-relative">
-                <span class="bot-arrow"><i class="fa fa-angle-down" aria-hidden="true"></i></span>
-                <select class="form-control" ng-model="truckName2" ng-change="searchByTruckName(truckName2);">
-                    <option value="" selected>All Vehicles</option>
-                    <option ng-repeat="trucks in trucksList">{{trucks.registrationNo}}</option>
-                </select>
-            </div>
-            <div class="col-sm-1 list-inline mailDownload">
-                <button  style="margin-left:7px" type="button" ng-click="shareDetailsViaEmail()"
-                         class="btn mailImage"><img src="images/Reports_Mail.png">
+            </li>
+            <li class="col-sm-4 pos-relative">
+                <div class="select-box erp-box">
+                    <ui-select ng-model="truckName" theme="select2"
+                               title="Choose a person" append-to-body="true"
+                               ng-change="searchByTruckName(truckName.registrationNo);">
+                        <ui-select-match placeholder=" Select a Truck" class="form-control ui-select-control">
+                            {{$select.selected.registrationNo || registrationNo}}
+                        </ui-select-match>
+                        <ui-select-choices
+                                repeat="trucks in trucksList  | propsFilter: {registrationNo: $select.search}">
+                            <div ng-bind-html="trucks.registrationNo | highlight: $select.search"></div>
+                        </ui-select-choices>
+                    </ui-select>
+                </div>
+            </li>
+            </li>
+            <li class="col-sm-1">
+                <button type="button" ng-click="shareDetailsViaEmail()"
+                        class="btn mailImage"><img src="images/Reports_Mail.png">
                 </button>
-            </div>
-            <div>
+            </li>
+            <li class="col-sm-1">
                 <button type="button" ng-click="downloadDetails();" class="btn mailImage">
                     <img src="images/Reports_Download.png"></button>
-            </div>
-        </div>
+            </li>
+        </ul>
     </div>
 
 
@@ -76,7 +84,7 @@
                 <a href="#" class="btn edit-icon" ng-click="goToEditTruckPage(trucks._id)">
                     <span class="glyphicon glyphicon-pencil"></span></a>
 
-                <a href="#" class="btn edit-icon"  ng-show="userType=='account'" ng-click="deleteTruck(trucks._id)">
+                <a href="#" class="btn edit-icon" ng-show="userType=='account'" ng-click="deleteTruck(trucks._id)">
 
 
                     <span class="glyphicon glyphicon-remove"></span>
