--- a/client/views/partials/trips/tripsList.html
+++ b/client/views/partials/trips/tripsList.html
@@ -52,7 +52,7 @@
                 {{trips.date | date:'dd-MM-yy'}}
             </td>
             <td data-title="'Reg No'" sortable="'truckName'" class="clickable-item">{{
-                trips.attrs.truckName}}
+                trips.attrs.truckName | uppercase}}
             </td>
             <td data-title="'Party Name'" sortable="'partyName'" class="clickable-item">{{
                 trips.attrs.partyName }}
