--- a/client/views/partials/trips/tripsEdit.html
+++ b/client/views/partials/trips/tripsEdit.html
@@ -16,7 +16,7 @@
                         <ui-select ng-model="trip.registrationNo" theme="select2" ng-change="selectedTruckTonnage()"
                                    style="min-width: 390px;"
                                    title="Choose a Truck" append-to-body="true">
-                            <ui-select-match placeholder="Select a Truck*" class="form-control custom-form-control">
+                            <ui-select-match class="form-control custom-form-control">
                                 {{$select.selected.registrationNo || truckRegNo}}
                             </ui-select-match>
                             <ui-select-choices
@@ -24,18 +24,18 @@
                                 <div ng-bind-html="truck.registrationNo | highlight: $select.search"></div>
                             </ui-select-choices>
                         </ui-select>
-                        <label class="focus-effect-for-input-trucks">Registration Number</label>
+                        <label class="focus-effect-for-input-trucks">Select a Truck*</label>
 
                     </div>
 
                     <div class="clearfix"></div>
                 </div>
-                <div class="form-group col-xs-12">
-                    <div class=" select-box styling-input-list">
+                <div class="form-group col-xs-12 styling-input-list">
+                    <div class=" select-box ">
                         <ui-select ng-model="trip.driverId" theme="select2"
                                    style="min-width: 390px;"
                                    title="Choose a person" append-to-body="true">
-                            <ui-select-match placeholder="Select a Driver*" class="form-control custom-form-control">
+                            <ui-select-match  class="form-control custom-form-control">
                                 {{$select.selected.fullName || driverName}}
                             </ui-select-match>
                             <ui-select-choices
@@ -44,7 +44,7 @@
                             </ui-select-choices>
                         </ui-select>
 
-                        <label class="focus-effect-for-input-trucks">Driver Name</label>
+                        <label class="focus-effect-for-input-trucks">Driver Name*</label>
                     </div>
                 </div>
                 <div class="form-group col-xs-12">
@@ -53,7 +53,7 @@
                         <ui-select ng-model="trip.partyId" theme="select2" ng-change="selectParty(trip)"
                                    style="min-width: 390px;"
                                    title="Choose a Party" append-to-body="true">
-                            <ui-select-match placeholder="Select a Party*" class="form-control custom-form-control">
+                            <ui-select-match class="form-control custom-form-control">
                                 {{$select.selected.name || partyName}}
                             </ui-select-match>
                             <ui-select-choices
@@ -61,7 +61,7 @@
                                 <div ng-bind-html="party.name | highlight: $select.search" ></div>
                             </ui-select-choices>
                         </ui-select>
-                        <label class="focus-effect-for-input-trucks">Party</label>
+                        <label class="focus-effect-for-input-trucks">Select Party*</label>
 
                     </div>
                 </div>
