--- a/client/views/partials/trucks/trucks-edit.html
+++ b/client/views/partials/trucks/trucks-edit.html
@@ -14,7 +14,7 @@
                     <ui-select ng-model="truck.truckType" theme="select2"
                                style="min-width: 390px;"
                                title="Choose a Truck Type" append-to-body="true">
-                        <ui-select-match placeholder="Select a Truck Type*" class="form-control custom-form-control">
+                        <ui-select-match class="form-control custom-form-control">
                             {{$select.selected.title || title}} , {{$select.selected.tonnes || tonnes}} Tonnes
                         </ui-select-match>
                         <ui-select-choices
@@ -27,6 +27,7 @@
                             </small>
                         </ui-select-choices>
                     </ui-select>
+                    <label class="focus-effect-for-input">Select Truck Type*</label>
                 </div>
             </div>
 
@@ -37,11 +38,11 @@
                 </div>
             </div>
             <div class="form-group col-xs-12 ">
-                <div class="select-box">
+                <div class="select-box styling-input-list">
                     <ui-select ng-model="truck.driverId" theme="select2"
                                style="min-width: 390px;"
                                title="Choose a person" append-to-body="true">
-                        <ui-select-match placeholder="Select a Driver" class="form-control custom-form-control">
+                        <ui-select-match class="form-control custom-form-control">
                             {{$select.selected.fullName || driverName}}
                         </ui-select-match>
                         <ui-select-choices
@@ -49,6 +50,7 @@
                             <div ng-bind-html="driver.fullName | highlight: $select.search"></div>
                         </ui-select-choices>
                     </ui-select>
+                    <label class="focus-effect-for-input">Select a Driver</label>
                 </div>
             </div>
             <div class="form-group col-xs-12">
