modified sending emails..

--- a/client/views/partials/expenses/expenses.html
+++ b/client/views/partials/expenses/expenses.html
@@ -66,7 +66,7 @@
                 maintanence.mode }}
             </td>
             <td data-title="'Description'" sortable="'description'" class="clickable-item">{{
-                maintanence.description
+                maintanence.description || '---'
                 }}
             </td>
             <td data-title="'Created By'" sortable="'createdByName'"
