report apis changed

--- a/client/views/partials/reports/expenseByVehicleId.html
+++ b/client/views/partials/reports/expenseByVehicleId.html
@@ -127,11 +127,10 @@
                    cellspacing="0" width="100%">
                 <tfoot>
                 <tr>
-                    <th >Total</th>
-                    <th>{{totalExpenses.totalDieselExpense}}</th>
-                    <th>{{totalExpenses.totaltollExpense}}</th>
-                    <th>{{totalExpenses.totalmExpense}}</th>
-                    <th>{{totalExpenses.totalmisc}}</th>
+                    <th colspan="3">Total</th>
+                    <th >{{totalExpenses}}</th>
+
+
                 </tr>
                 </tfoot>
             </table>
